--- a/index.html
+++ b/index.html
@@ -2,10 +2,39 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/images/user-manage.svg" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Management</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="User management on the website.">
+    <link rel="icon" type="image/svg+xml" href="/images/user-manage.svg" />
+    <link rel="preconnect" href="/" crossOrigin="anonymous" />
+    <link
+      rel="preload"
+      as="font"
+      type="font/woff2"
+      href="src/assets/fonts/Poppins-Light.woff"
+      crossOrigin="anonymous"
+    />
+    <link
+      rel="preload"
+      as="font"
+      type="font/woff2"
+      href="src/assets/fonts/Poppins-Regular.woff"
+      crossOrigin="anonymous"
+    />
+    <link
+      rel="preload"
+      as="font"
+      type="font/woff2"
+      href="src/assets/fonts/Poppins-Bold.woff"
+      crossOrigin="anonymous"
+    />
+    <link
+      rel="preload"
+      as="font"
+      type="font/woff2"
+      href="src/assets/fonts/Poppins-ExtraBold.woff"
+      crossOrigin="anonymous"
+    />
   </head>
   <body>
     <div id="root"></div>
